--- a/mainapp/templates/mainapp/stocktracker.html
+++ b/mainapp/templates/mainapp/stocktracker.html
@@ -40,7 +40,7 @@ stockTracker
             <td>{{key}}</td>
             <td id="{{key}}_price">{{ value|get:"Quote Price"|floatformat:4 }}</td>
             <td id="{{key}}_prevprice">{{ value|get:"Previous Close"|floatformat:4 }}</td>
-            <td>{{ value|get:"Open" }}</td>
+            <td id="{{key}}_open" >{{ value|get:"Open" }}</td>
             <td id="{{key}}_change">
                 <script>
                     var change = document.getElementById("{{key}}_price").innerHTML = document.getElementById("{{key}}_prevprice").innerHTML;
@@ -51,7 +51,7 @@ stockTracker
                     }
                     else if(change<0){
                         document.getElementById("{{key}}_change").className = "red";
-                        document.getElementById("{{key}}_change").innerHTML = "-" + change;
+                        document.getElementById("{{key}}_change").innerHTML = change;
 
                     }
                     else{
@@ -60,14 +60,57 @@ stockTracker
                     document.getElementById("{{key}}_change").innerHTML = change;
                 </script>
             </td>
-            <td>{{ value|get:"Market Cap" }}</td>
-            <td>{{ value|get:"Volume" }}</td>
+            <td id="{{key}}_cap">{{ value|get:"Market Cap" }}</td>
+            <td id="{{key}}_vol">{{ value|get:"Volume" }}</td>
           </tr>
         {% endfor %}  
         </tbody>
       </table>
       </table>
 </div>
+</div>
+{{ room_name|json_script:"room-name" }}
+<script>
+  const roomName = JSON.parse(document.getElementById('room-name').textContent)
+  var queryString = window.location.search;
+  queryString = queryString.substring(1);
+  console.log(queryString);
+  const stockSocket  = new WebSocket(
+    'ws://' +
+    window.location.host +
+    '/ws/stock/' +
+    roomName +
+    '/' +
+    '?' +
+    queryString
+  );
+
+  stockSocket.onmessage = function(e) {
+    console.log(e.data);
+    const data = JSON.parse(e.data);
+    console.log(data);
+    for (const [key, value] of Object.entries(data)){
+      var price = Number((value['Quote Price']).toFixed(4));
+      var prevprice = Number((value['Previous Close']).toFixed(4));
+
+      document.getElementById(key + '_price').innerHTML = price;
+      document.getElementById(key + '_prevprice').innerHTML = prevprice;
+      document.getElementById(key + '_open').innerHTML = value['Open'];
+      document.getElementById(key + '_cap').innerHTML = value['Market Cap'];
+      document.getElementById(key + '_vol').innerHTML = value['Volume'];
+      var change = document.getElementById(key + '_price').innerHTML - document.getElementById(key + '_prevprice').innerHTML;
+      change = Number((change).toFixed(4));
+      if(change > 0){
+        document.getElementById(key + '_change').className = "green";
+        document.getElementById(key + '_change').innerHTML = "+" + change;
+      }
+      else if(change < 0){
+        document.getElementById(key + '_change').className = "red";
+        document.getElementById(key + '_change').innerHTML = change;
+      }
+    }
+  };
+</script>
 {% endblock %}
 
 {% block js %}
